<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/activity_horizontal_margin"
    android:paddingVertical="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ContentGroupingFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/song_details"
        android:textColor="@color/dark_grey"
        android:textSize="@dimen/heading" />

    <RelativeLayout
        android:id="@+id/song_data_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/label_song_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_margin="@dimen/tiny_margin"
            android:text="@string/label_song_name"
            android:textColor="@color/dark_grey" />

        <TextView
            android:id="@+id/value_song_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/label_song_name"
            android:layout_alignParentEnd="true"
            android:text="@string/value_song_name"
            android:textColor="@color/dark_grey" />

        <TextView
            android:id="@+id/label_song_artists"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/label_song_name"
            android:layout_alignParentStart="true"
            android:layout_margin="@dimen/tiny_margin"
            android:text="@string/label_song_artists"
            android:textColor="@color/dark_grey" />

        <TextView
            android:id="@+id/value_song_artists"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/label_song_artists"
            android:layout_alignParentEnd="true"
            android:text="@string/value_song_artists"
            android:textColor="@color/dark_grey" />

        <TextView
            android:id="@+id/label_song_cost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/label_song_artists"
            android:layout_alignParentStart="true"
            android:layout_margin="@dimen/tiny_margin"
            android:text="@string/label_song_cost"
            android:textColor="@color/dark_grey" />

        <TextView
            android:id="@+id/value_song_cost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/label_song_cost"
            android:layout_alignParentEnd="true"
            android:text="@string/value_song_cost"
            android:textColor="@color/dark_grey" />
    </RelativeLayout>
</LinearLayout>