<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/lorem_ipsum_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/very_light_grey"
    android:paddingHorizontal="@dimen/activity_horizontal_margin"
    android:paddingVertical="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <TextView
        android:id="@+id/lorem_ipsum_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lorem_ipsum_title"
        android:textColor="@color/light_grey"
        android:textSize="@dimen/large_heading" />

    <TextView
        android:id="@+id/lorem_ipsum_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lorem_ipsum_title"
        android:text="@string/lorem_ipsum"
        android:textColor="@color/medium_grey" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_item_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/lorem_ipsum_text"
        android:src="@android:drawable/ic_input_add"
        app:tint="@color/white"
        android:contentDescription="@string/add_item_fab"
        android:backgroundTint="@color/colorPrimaryLight"
        app:borderWidth="0dp"
        android:elevation="6dp"
        app:fabSize="normal" />

    <CheckBox
        android:id="@+id/color_contrast_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:textSize="@dimen/large_text"
        android:padding="@dimen/standard_padding"
        android:text="@string/fix_low_contrast" />
</RelativeLayout>